injected in an extra overview field.

=item *

Fixed a bug in the parsing of the I<ovgrouppat> wildmat in F<inn.conf>
that prevented overview data from being generated when poisoned groups
were specified but a latter sub-pattern made the group wanted.  A uwildmat
expression is now correctly handled, and a potential segfault has been fixed.
Thanks to S<D. Stussy> for the bug report.

=item *

Fixed a bug when HDR, XHDR and XPAT were used when I<virtualhost> was set
to true in F<readers.conf>.  The Xref: header of articles posted to only
one newsgroup appeared empty.

=item *

Fixed a bug in B<tdx-util> which was not properly parsing empty overview
fields when called with B<-A> or B<-F>.

=item *

Fixed a bug in B<cvtbatch> which was returning only the size of the
headers of an article when the C<b> parameter was used with the B<-w>
flag.  It now correctly returns the size of the whole article, which
is what C<b> is supposed to do.  Besides, B<cvtbatch> has a new C<t>
parameter which can be used with the B<-w> flag, so as to retrieve
the arrival time of an article.

=item *

Fixed a bug in how B<mailpost> handles cross-posting feature.  It was not
properly detaching from B<sendmail>.  Thanks to Harald Dunkel for the patch.

=item *

B<batcher> has not supported the retrieval of an article with its
file name for a long time.  The B<-S> flag is therefore removed.

=item *

B<inews> no longer rejects articles that contain more than 50 header
fields.  Thanks to Torsten Jerzembeck for the bug report.

=item *

B<news.daily> no longer sends superfluous mails when the B<nomail>
keyword is given.  Mail is only sent when there is real output.
Previously, there would always be headings and empty lines useful
to structure the full report, which are now ommitted.  Also, the
output of programs executed with B<postexec> is now included in the
regular mail.  Thanks to Florian Schlichting for the patch.

=item *
